--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Mestate</title>
 </head>
-<body class="bg-black">
+<body class="bg-black text-white">
   <h1>Welcome to Mestate</h1>
     
 </body>
