--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="icon" sizes="180x180" href="/assests/images/" type="image/x-icon"> -->
+    <link rel="icon" sizes="180x180" href="/assests/images/favicon.jpeg" type="image/x-icon">
     <link href="assests/font-awesome-4.7.0/" rel="stylesheet" />
     <link
       rel="stylesheet"
@@ -123,16 +123,17 @@
         </div>
 
         <div class="xl:w-[25%] mx-1 flex justify-start items-center gap-2">
-          <button
-            class="p-3 hover:animate__animated animate__pulse hover:text-purple-700 hover:bg-gray-200 bg-purple-700 text-white text-[13px] rounded-[10px]" onclick="popopen()" 
+          <a href="profile-create.html"
+            class="p-3 hover:animate__animated animate__pulse hover:text-purple-700 hover:bg-gray-200 bg-purple-700 text-white text-[13px] rounded-[10px]" 
           >
-            Create Account
-          </button>
-          <button
+            Create Profile
+          </a href="profile-create.html">
+
+          <a href="login.html"
             class="p-3 hover:animate__animated animate__pulse hover:text-purple-700 hover:bg-gray-200 bg-purple-700 text-white text-[14px] rounded-[10px]"
           >
             Login
-          </button>
+          </a href="login.html">
 
           <div class="flex justify-center mx-2 gap-2">
             <a href="#"
@@ -234,16 +235,16 @@
           </div>
 
           <div class="justify-center flex-col mt-[15px]">
-            <button
-              class="p-3 mx-9 hover:animate__animated animate__pulse hover:text-purple-700 bg-purple-700 hover:bg-white text-white text-[13px] rounded-[10px]" onclick="popopen()" 
+            <a href="profile-create.html"
+              class="p-3 mx-9 hover:animate__animated animate__pulse hover:text-purple-700 bg-purple-700 hover:bg-white text-white text-[13px] rounded-[10px]" 
             >
-              Create Account
-            </button>
-            <button
+              Create Profile
+            </a href="profile-create.html">
+            <a href="login.html"
               class="p-3 hover:animate__animated animate__pulse hover:text-purple-700 bg-purple-700 text-white hover:bg-white text-[14px] rounded-[10px]"
             >
               Login
-            </button>
+            </a href="login.html">
 
             <div class="flex justify-center my-[20px] mx-2 gap-2">
               <a href="#"
@@ -1501,17 +1502,17 @@
 
     <p class="lg:text-[25px] md:text-[20px] text-[16px] lg:p-0 p-1 text-purple-700 shadow-md  float-right glow lg:w-[20%] text-center">Mestate</p>
 
-    <h2 class="md:text-[30px] text-[20px] font-bold text-purple-700 text-center">Create an Account </h2>
+    <h2 class="md:text-[30px] text-[20px] font-bold text-purple-700 text-center">Create a Profile </h2>
     <p class="text-[13px] my-2 md:w-[50%]  mx-auto text-center px-2">Join our platform and connect with numerous landlords and Tenants across Nigeria</p>
 
     <div class="flex flex-col justify-center items-center gap-4  mt-4">
 
-      <button class="text-[14px] p-3 hover:bg-[#f0f0f0] hover:text-purple-700 rounded-[5px] shadow-lg text-white bg-purple-700">Join as a Tenant</button>
-     <button class="text-[14px] p-3 hover:bg-[#f0f0f0] hover:text-purple-700 rounded-[5px] shadow-lg text-white bg-purple-700">Join as a landlord</button>
+      <a href="profile-create.html" class="text-[14px] p-3 hover:bg-[#f0f0f0] hover:text-purple-700 rounded-[5px] shadow-lg text-white bg-purple-700">Join as a Tenant</a>
+     <a href="profile-create.html" class="text-[14px] p-3 hover:bg-[#f0f0f0] hover:text-purple-700 rounded-[5px] shadow-lg text-white bg-purple-700">Join as a landlord</a>
 
     </div>
 
-    <p class="text-center text-[14px] my-4">Already have an Account? <a href="login.html" class="text-purple-700 underline">Login in</a> </p>
+    <p class="text-center text-[14px] my-4">Already have an Account? <a href="login.html" class="text-purple-700 underline">Login</a> </p>
 
     
 
