--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="icon" sizes="180x180" href="/assests/images/" type="image/x-icon"> -->
+    <link rel="icon" sizes="180x180" href="/assests/images/favicon.jpeg" type="image/x-icon">
     <link href="assests/font-awesome-4.7.0/" rel="stylesheet" />
     <link
       rel="stylesheet"
@@ -26,7 +26,7 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- <script src="index.js"></script> -->
-    <title>Mestate</title>
+    <title> About Mestate</title>
 
     <style>
       .hero {
@@ -54,7 +54,9 @@
     <main id="body" class="">
 
       <header class="bg-white hidden lg:block shadow-lg m-2">
+
         <nav class="flex justify-between">
+  
           <div class="mx-auto items-center lg:w-[10%] xl:w-[15%]">
             <a href="index.html" class="flex items-center justify-end"
               ><img
@@ -64,64 +66,58 @@
             /></a>
             <!-- <p class="text-[12px] ml-0">Mestate </p> -->
           </div>
-
+  
           <div class="navhead lg:w-[50%] xl:w-[60%]">
+  
             <ul class="flex justify-center items-center gap-8 p-2 m-4">
               <li>
                 <a
                   href="index.html"
-                  class="text-[18px] text-black hover:text-purple-700"
+                  class="text-[18px] text-black hover:text-purple-700 "
                   >Home</a
                 >
               </li>
-
+  
               <li>
-                <a
-                  href="about.html"
-                  class="text-[18px] border-b-2 border-purple-700 text-black hover:text-purple-700"
+                <a href="about.html" class="text-[18px] text-black hover:text-purple-700"
                   >About</a
                 >
               </li>
-
+  
               <li>
-                <a
-                  href="#proper"
-                  class="scroll-behavior-smooth !important text-[18px] text-black hover:text-purple-700"
+                <a href="#proper" class=" scroll-behavior-smooth !important  text-[18px] text-black hover:text-purple-700"
                   >Properties</a
                 >
               </li>
-
+  
               <li>
-                <a
-                  href="#review"
-                  class="text-[18px] text-black hover:text-purple-700"
+                <a href="#review" class="text-[18px] text-black hover:text-purple-700"
                   >Reviews</a
                 >
               </li>
-
+  
               <li>
-                <a
-                  href="contact.html"
-                  class="text-[18px] text-black hover:text-purple-700"
+                <a href="contact.html" class="text-[18px] text-black border-b-2 border-purple-700 hover:text-purple-700"
                   >Contact</a
                 >
               </li>
             </ul>
+  
           </div>
-
+  
           <div class="xl:w-[25%] mx-1 flex justify-start items-center gap-2">
-            <button
-              class="p-3 hover:animate__animated animate__pulse hover:text-purple-700 hover:bg-gray-200 bg-purple-700 text-white text-[13px] rounded-[10px]"
-              onclick="popopen()"
+            <a href="profile-create.html"
+              class="p-3 hover:animate__animated animate__pulse hover:text-purple-700 hover:bg-gray-200 bg-purple-700 text-white text-[13px] rounded-[10px]" 
             >
-              Create Account
-            </button>
-            <button
+              Create Profile
+            </a href="profile-create.html">
+  
+            <a href="login.html"
               class="p-3 hover:animate__animated animate__pulse hover:text-purple-700 hover:bg-gray-200 bg-purple-700 text-white text-[14px] rounded-[10px]"
             >
               Login
-            </button>
-
+            </a href="login.html">
+  
             <div class="flex justify-center mx-2 gap-2">
               <a href="#"
                 ><i
@@ -141,14 +137,18 @@
               ></a>
             </div>
           </div>
+  
         </nav>
+  
       </header>
-
+  
       <header class="lg:hidden relative mx-2 lg:my-2 my-1">
+  
         <nav
           class="flex md:h-[100px] justify-between shadow-lg item-center p-2 md:p-0"
         >
           <div class="mx-auto items-center w-[50%]">
+  
             <a href="index.html" class="flex items-center justify-center"
               ><img
                 src="assests/images/logo 2.jpeg"
@@ -157,7 +157,7 @@
             /></a>
             <!-- <p class="text-[12px] ml-0">Mestate </p> -->
           </div>
-
+  
           <div class="w-[50%] bg-[#f0f0f0] flex justify-center items-center">
             <a href="#">
               <i
@@ -168,7 +168,7 @@
             </a>
           </div>
         </nav>
-
+  
         <div class="hidden" loading="lazy" id="neck">
           <div
             class="sm:right-[0px] absolute sm:top-[27px] md:right-[170px] md:top-[25px] top-[17px] right-[62px]"
@@ -181,7 +181,7 @@
               ></i>
             </a>
           </div>
-
+  
           <div
             class="navhead md:top-[80px] top-[68px] absolute w-full rounded-b-[20px] shadow-lg h-[50vh]"
           >
@@ -190,54 +190,45 @@
                 <li class="my-[10px]">
                   <a
                     href="index.html"
-                    class="text-[18px] text-black hover:text-purple-700 border-b-2 border-purple-700"
+                    class="text-[18px] text-black hover:text-purple-700 "
                     >Home</a
                   >
                 </li>
                 <li class="my-[10px]">
-                  <a
-                    href="about.html"
-                    class="text-[18px] text-black hover:text-purple-700"
+                  <a href="about.html" class="text-[18px] text-black hover:text-purple-700"
                     >About</a
                   >
                 </li>
                 <li class="my-[10px]">
-                  <a
-                    href="#proper"
-                    class="scroll-smooth text-[18px] text-black hover:text-purple-700"
+                  <a href="#proper" class=" scroll-smooth text-[18px] text-black hover:text-purple-700"
                     >Properties</a
                   >
                 </li>
                 <li class="my-[10px]">
-                  <a
-                    href="#review"
-                    class="text-[18px] text-black hover:text-purple-700"
+                  <a href="#review" class="text-[18px] text-black hover:text-purple-700"
                     >Reviews</a
                   >
                 </li>
                 <li class="my-[10px]">
-                  <a
-                    href="contact.html"
-                    class="text-[18px] text-black hover:text-purple-700"
+                  <a href="contact.html" class="text-[18px] text-blackborder-b-2 border-purple-700 hover:text-purple-700"
                     >Contact</a
                   >
                 </li>
               </ul>
             </div>
-
+  
             <div class="justify-center flex-col mt-[15px]">
-              <button
-                class="p-3 mx-9 hover:animate__animated animate__pulse hover:text-purple-700 bg-purple-700 hover:bg-white text-white text-[13px] rounded-[10px]"
-                onclick="popopen()"
+              <a href="profile-create.html"
+                class="p-3 mx-9 hover:animate__animated animate__pulse hover:text-purple-700 bg-purple-700 hover:bg-white text-white text-[13px] rounded-[10px]" 
               >
-                Create Account
-              </button>
-              <button
+                Create Profile
+              </a href="profile-create.html">
+              <a href="login.html"
                 class="p-3 hover:animate__animated animate__pulse hover:text-purple-700 bg-purple-700 text-white hover:bg-white text-[14px] rounded-[10px]"
               >
                 Login
-              </button>
-
+              </a href="login.html">
+  
               <div class="flex justify-center my-[20px] mx-2 gap-2">
                 <a href="#"
                   ><i
@@ -551,52 +542,8 @@
         <h2 class="md:text-[20px] text-[14px] text-center">Mestate</h2>
         <h3 class="text-right md:text-[15px] text-[13px]">Shadow-Dev</h3>
       </footer>
+      
     </main>
-
-    <div
-      id="create"
-      class="lg:w-[50%] md:w-[70%] hidden w-[95%] mx-3 mx-auto shadow-lg rounded-[14px] fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-white md:mx-0 mx-3 p-3"
-    >
-      <i
-        id="dead"
-        class="fa fa-close p-3 rounded-[6px] border-purple-700 border text-purple-700 text-[18px] md:text-[20px]"
-        onclick="popopen()"
-      ></i>
-
-      <p
-        class="lg:text-[25px] md:text-[20px] text-[16px] lg:p-0 p-1 text-purple-700 shadow-md float-right glow lg:w-[20%] text-center"
-      >
-        Mestate
-      </p>
-
-      <h2
-        class="md:text-[30px] text-[20px] font-bold text-purple-700 text-center"
-      >
-        Create an Account
-      </h2>
-      <p class="text-[13px] my-2 md:w-[50%] mx-auto text-center px-2">
-        Join our platform and connect with numerous landlords and Tenants across
-        Nigeria
-      </p>
-
-      <div class="flex flex-col justify-center items-center gap-4 mt-4">
-        <button
-          class="text-[14px] p-3 hover:bg-[#f0f0f0] hover:text-purple-700 rounded-[5px] shadow-lg text-white bg-purple-700"
-        >
-          Join as a Tenant
-        </button>
-        <button
-          class="text-[14px] p-3 hover:bg-[#f0f0f0] hover:text-purple-700 rounded-[5px] shadow-lg text-white bg-purple-700"
-        >
-          Join as a landlord
-        </button>
-      </div>
-
-      <p class="text-center text-[14px] my-4">
-        Already have an Account?
-        <a href="login.html" class="text-purple-700 underline">Login in</a>
-      </p>
-    </div>
 
     <script src="index.js"></script>
   </body>
