--- a/about.html
+++ b/about.html
@@ -25,7 +25,9 @@
       rel="stylesheet"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- <script src="index.js"></script> -->
+    <link rel="stylesheet" href="preloader.css">
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="lost.css">
     <title> About Mestate</title>
 
     <style>
@@ -53,6 +55,25 @@
 
     <main id="body" class="">
 
+      <div id="preloader" class="flex items-center  justify-center ">
+
+        <div class="md:w-[40%]  pulse w-full md:mx-4  mx-auto flex justify-center  ">
+  
+            <div class=" bg-white  mx-auto glow shadow-lg rounded-full w-[40%] flex justify-center items-center flex px-4 gap-2  my-4">
+  
+              <a href="" class="lg:w-[22%] w-[30%] flex  items-center"
+              ><img
+                src="assests/images/logo 2.jpeg"
+                class=" "
+                alt="logo"
+              /></a>
+  
+              <a href="" class=" lg:text-[18px]  md:text-[20px] text-[16px] lg:p-0 p-1 text-purple-700 "> Mestate </a>
+  
+            </div>
+      </div>
+      </div>
+
       <header class="bg-white hidden lg:block shadow-lg m-2">
 
         <nav class="flex justify-between">
@@ -79,7 +100,7 @@
               </li>
   
               <li>
-                <a href="about.html" class="text-[18px] text-black hover:text-purple-700"
+                <a href="about.html" class="text-[18px] text-black border-b-2 border-purple-700 hover:text-purple-700"
                   >About</a
                 >
               </li>
@@ -97,7 +118,7 @@
               </li>
   
               <li>
-                <a href="contact.html" class="text-[18px] text-black border-b-2 border-purple-700 hover:text-purple-700"
+                <a href="contact.html" class="text-[18px] text-black  hover:text-purple-700"
                   >Contact</a
                 >
               </li>
@@ -107,32 +128,32 @@
   
           <div class="xl:w-[25%] mx-1 flex justify-start items-center gap-2">
             <a href="profile-create.html"
-              class="p-3 hover:animate__animated animate__pulse hover:text-purple-700 hover:bg-gray-200 bg-purple-700 text-white text-[13px] rounded-[10px]" 
+              class="p-3 but  hover:text-purple-700 hover:bg-gray-200 bg-purple-700 text-white text-[13px] rounded-[10px]" 
             >
               Create Profile
             </a href="profile-create.html">
   
             <a href="login.html"
-              class="p-3 hover:animate__animated animate__pulse hover:text-purple-700 hover:bg-gray-200 bg-purple-700 text-white text-[14px] rounded-[10px]"
+              class="p-3 but hover:text-purple-700 hover:bg-gray-200 bg-purple-700 text-white text-[14px] rounded-[10px]"
             >
               Login
             </a href="login.html">
   
             <div class="flex justify-center mx-2 gap-2">
-              <a href="#"
+              <a href="https://web.facebook.com/profile.php?id=61561403431960" target="_blank"
                 ><i
-                  class="fa fa-facebook p-3 bg-purple-700 text-white rounded-[12px] hover:text-purple-700 hover:bg-gray-200"
+                  class="fa fa-facebook but p-3 bg-purple-700 text-white rounded-[12px] hover:text-purple-700 hover:bg-gray-200"
                 ></i
               ></a>
-              <a href="#"
+              <a href="https://whatsapp.com/channel/0029VaeVXL8Chq6HOGAkvg3j" target="_blank"
                 ><i
-                  class="fa fa-linkedin p-3 bg-purple-700 text-white rounded-[12px] hover:text-purple-700 hover:bg-gray-200"
+                  class="fa fa-whatsapp but p-3 bg-purple-700 text-white rounded-[12px] hover:text-purple-700 hover:bg-gray-200"
                 ></i
               ></a>
-              <a href="#"
+              <a href="https://www.x.com/MestateHouse" target="_blank"
                 ><i
                   aria-hidden="true"
-                  class="fa fa-twitter p-3 bg-purple-700 rounded-[12px] hover:text-purple-700 hover:bg-gray-200 text-white"
+                  class="fa fa-twitter but p-3 bg-purple-700 rounded-[12px] hover:text-purple-700 hover:bg-gray-200 text-white"
                 ></i
               ></a>
             </div>
@@ -167,9 +188,10 @@
               ></i>
             </a>
           </div>
+          
         </nav>
   
-        <div class="hidden" loading="lazy" id="neck">
+        <div class="hidden slide"  loading="lazy" id="neck">
           <div
             class="sm:right-[0px] absolute sm:top-[27px] md:right-[170px] md:top-[25px] top-[17px] right-[62px]"
           >
@@ -183,7 +205,7 @@
           </div>
   
           <div
-            class="navhead md:top-[80px] top-[68px] absolute w-full rounded-b-[20px] shadow-lg h-[50vh]"
+            class="navhead animate__animated animate__slideInRight md:top-[80px] top-[68px] absolute w-full rounded-b-[20px] shadow-lg h-[50vh]"
           >
             <div class="h-[60%]">
               <ul class="p-2 mx-4">
@@ -195,7 +217,7 @@
                   >
                 </li>
                 <li class="my-[10px]">
-                  <a href="about.html" class="text-[18px] text-black hover:text-purple-700"
+                  <a href="about.html" class="text-[18px] border-b-2 border-purple-700 text-black hover:text-purple-700"
                     >About</a
                   >
                 </li>
@@ -210,7 +232,7 @@
                   >
                 </li>
                 <li class="my-[10px]">
-                  <a href="contact.html" class="text-[18px] text-blackborder-b-2 border-purple-700 hover:text-purple-700"
+                  <a href="contact.html" class="text-[18px] text-black hover:text-purple-700"
                     >Contact</a
                   >
                 </li>
@@ -219,37 +241,39 @@
   
             <div class="justify-center flex-col mt-[15px]">
               <a href="profile-create.html"
-                class="p-3 mx-9 hover:animate__animated animate__pulse hover:text-purple-700 bg-purple-700 hover:bg-white text-white text-[13px] rounded-[10px]" 
+                class="p-3 mx-9 but hover:text-purple-700 bg-purple-700 hover:bg-white text-white text-[13px] rounded-[10px]" 
               >
                 Create Profile
               </a href="profile-create.html">
               <a href="login.html"
-                class="p-3 hover:animate__animated animate__pulse hover:text-purple-700 bg-purple-700 text-white hover:bg-white text-[14px] rounded-[10px]"
+                class="p-3 but hover:text-purple-700 bg-purple-700 text-white hover:bg-white text-[14px] rounded-[10px]"
               >
                 Login
               </a href="login.html">
   
               <div class="flex justify-center my-[20px] mx-2 gap-2">
-                <a href="#"
+                <a href="https://web.facebook.com/profile.php?id=61561403431960" target="_blank"
                   ><i
-                    class="fa fa-facebook p-3 bg-purple-700 text-white rounded-[12px] hover:text-purple-700 hover:bg-white"
+                    class="fa fa-facebook  but p-3 bg-purple-700 text-white rounded-[12px] hover:text-purple-700 hover:bg-white"
                   ></i
                 ></a>
-                <a href="#"
+                <a href="https://whatsapp.com/channel/0029VaeVXL8Chq6HOGAkvg3j" target="_blank"
                   ><i
-                    class="fa fa-linkedin p-3 bg-purple-700 text-white rounded-[12px] hover:text-purple-700 hover:bg-white"
+                    class="fa fa-whatsapp but p-3 bg-purple-700 text-white rounded-[12px] hover:text-purple-700 hover:bg-white"
                   ></i
                 ></a>
-                <a href="#"
+                <a href="https://www.x.com/MestateHouse" target="_blank"
                   ><i
                     aria-hidden="true"
-                    class="fa fa-twitter p-3 bg-purple-700 rounded-[12px] hover:text-purple-700 hover:bg-white text-white"
+                    class="fa fa-twitter p-3 but bg-purple-700 rounded-[12px] hover:text-purple-700 hover:bg-white text-white"
                   ></i
                 ></a>
               </div>
             </div>
           </div>
+  
         </div>
+        
       </header>
 
       <section class="mx-2 lg:h-[80vh] h-[50vh] hero text-purple-700">
@@ -377,11 +401,9 @@
       </section>
 
       <section class="m-2">
+
         <h2
-          class="mx-[20px] text-[26px] md:text-[45px] text-left mx-3 mt-7 text-purple-700 font-bold"
-        >
-          Our Mission
-        </h2>
+          class="mx-[20px] text-[26px] md:text-[45px] text-left mx-3 mt-7 text-purple-700 font-bold"> Our Mission </h2>
         <p
           class="mx-[20px] text-[10px] md:text-[13px] text-center mb-3 text-black md:text-left md:mx-3"
         >
@@ -406,10 +428,9 @@
           </h2>
 
           <div
-            class="flex flex-col lg:mt-0 mt-3 md:flex-wrap md:flex-row md:justify-center gap-[30px] lg:gap-4 md:gap-[60px] lg:justify-between md:items-center md:p-3 xl:p-5"
+            class="flex slide  flex-col lg:mt-0 mt-3 md:flex-wrap md:flex-row md:justify-center gap-[30px] lg:gap-4 md:gap-[60px] lg:justify-between md:items-center md:p-3 xl:p-5"
           >
-            <div
-              class="lg:w-[30%] w-full md:w-[40%] bg-[#f0f0f0] shadow-lg rounded-[12px] flex lg:justify-center"
+            <div class=" slide lg:w-[30%] w-full md:w-[40%] bg-[#f0f0f0] shadow-lg rounded-[12px] flex lg:justify-center"
             >
               <div class="md:p-3 lg:p-6 p-3">
                 <span
@@ -433,8 +454,7 @@
               </div>
             </div>
 
-            <div
-              class="lg:w-[30%] w-full md:w-[40%] bg-[#f0f0f0] shadow-lg rounded-[12px] flex lg:justify-center"
+            <div class="slide lg:w-[30%] w-full md:w-[40%] bg-[#f0f0f0] shadow-lg rounded-[12px] flex lg:justify-center"
             >
               <div class="md:p-3 lg:p-6 p-3">
                 <span
@@ -459,8 +479,7 @@
               </div>
             </div>
 
-            <div
-              class="lg:w-[30%] w-full md:w-[40%] bg-[#f0f0f0] shadow-lg rounded-[12px] flex lg:justify-center"
+            <div class="slide lg:w-[30%] w-full md:w-[40%] bg-[#f0f0f0] shadow-lg rounded-[12px] flex lg:justify-center"
             >
               <div class="md:p-3 lg:p-6 p-3">
                 <span
@@ -486,8 +505,7 @@
               </div>
             </div>
 
-            <div
-              class="lg:w-[30%] w-full md:w-[40%] bg-[#f0f0f0] shadow-lg rounded-[12px] flex lg:justify-center"
+            <div class="slide lg:w-[30%] w-full md:w-[40%] bg-[#f0f0f0] shadow-lg rounded-[12px] flex lg:justify-center"
             >
               <div class="md:p-3 lg:p-6 p-3">
                 <span
@@ -512,6 +530,7 @@
             </div>
 
           </div>
+
         </div>
       </section>
 
