--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
         transform: translateY(-50%);
         cursor: pointer;
       }
+
+      .dart {
+        background-color:  #f0f0f0;
+        color:  rgb(181, 129, 226);
+        border: solid;
+        border-radius: 10px;
+        padding: 2px;
+      }
       
     </style>
 
@@ -603,10 +611,10 @@
           </div>
 
           <div class=" bg-[#f0f0f0] mt-1 m  mx-auto px-2 text-black">
-            <button class="md:text-[15px] text-[14px] rounded-[10px] my-2  bg-white text-purple-700 py-2 px-3 " >All</button>
-            <button class="md:text-[15px] text-[14px]  py-2 px-3  my-2 " >Rent</button>
-            <button class="md:text-[15px] text-[14px]  py-2 px-3  my-2 " >Lease</button>
-            <button class="md:text-[15px] text-[14px]  py-2 px-3  my-2  " >Purchase</button>
+            <button class="md:text-[15px] text-[14px]  my-2 shine dart   py-2 px-3 " >All</button>
+            <button class="md:text-[15px] text-[14px]  py-2 px-3 shine  my-2 " >Rent</button>
+            <button class="md:text-[15px] text-[14px]  py-2 px-3 shine  my-2 " >Lease</button>
+            <button class="md:text-[15px] text-[14px]  py-2 px-3  my-2 shine  " >Purchase</button>
           </div>
 
         </div>
