--- a/contact.html
+++ b/contact.html
@@ -455,6 +455,14 @@
 
       </section>
 
+      <!-- <section class="m-2">
+
+        <div class="">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d17286.058557649954!2d3.847168321786748!3d7.3783725716425685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x10398c57cef39283%3A0x2c8c9ac00cc11104!2sAgo%20Taylor%20bus%20stop%2C%20Ibadan-Abeokuta%20Rd%2C%20Oluyole%2C%20Ibadan%20200273%2C%20Oyo!3m2!1d7.377445799999999!2d3.8574834!5e0!3m2!1sen!2sng!4v1722499004909!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+      </section> -->
+
       <section class="m-2">
 
         <h2 class="mx-[20px] text-[26px] md:text-[45px] text-right mx-3 mt-7 text-purple-700 font-bold"> FAQ</h2>
