--- a/dashbord_marketplace.html
+++ b/dashbord_marketplace.html
@@ -152,7 +152,7 @@
 
             <div class="p-2  shadow-lg flex justify-between items-center  rounded-tr-[25px]">
 
-              <h2 class="md:text-[25px] text-[18px] ml-[38px] lg:mx-5">Welcome <b class="text-purple-700 ">John</b></h2>
+              <h2 class="md:text-[25px] text-[18px] md:text-left text-right  md:w-full w-[60%] lg:mx-5">Welcome <b class="text-purple-700 ">John</b></h2>
 
               <div class=" flex md:mx-3 mx-2">
                 <i class=" fa fa-battery flex gap-3 px-2 py-3 items-center text-[15px] md:text-[20px] text-purple-700 my-2  " aria-hidden="true"></i>
