--- a/index.html
+++ b/index.html
@@ -318,11 +318,9 @@
             for You & Your Family
           </h2>
           <p
-            class="my-4 text-center text-[10px] lg:text-[12px] mx-auto lg:max-w-[400px] px-2"
+            class="my-4 text-center text-[12px] lg:text-[14px] mx-auto lg:max-w-[400px] px-2"
           >
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-            quaerat tempore reiciendis sapiente, corporis quos tenetur nulla?
-            Distinctio, quaerat cum.
+          We provide rental services on properties at affordable fee. This is your one-stop arena for apartment needs. Allow us to make living more comfortable for you.
           </p>
 
           <div class="flex justify-center gap-4 max-w-[350px] mx-auto">
