--- a/about.html
+++ b/about.html
@@ -49,6 +49,7 @@
         clip-path: polygon(0 0, 100% 0, 91% 100%, 0 100%);
       }
     </style>
+
   </head>
 
   <body class="bg-white" id="class">
@@ -551,6 +552,25 @@
         >
       </p>
       <hr class="w-[95%] mx-auto" />
+
+      <div class="flex flex-col py-3 gap-7 lg:gap-0 justify-between">
+        <h3 class="text-center p-2 text-[12px] md:text-[14px] w-[70%] mx-auto px-4">
+          At Mestate, we pride ourselves on our dedicated and knowledgeable team, committed to helping you find your perfect home. Our team is a diverse group of professionals with extensive experience in real estate, client management and ensuring you receive the best service and advice.
+        </h3>
+
+        <div class="flex w-[80%] flex-wrap mx-auto ">
+
+          <div class="">
+            <img src="" alt="">
+            <h2 class=""></h2>
+            <p></p>
+          </div>
+
+        </div>
+
+      </div>
+
+
 
       </section>
 
