--- a/dashboard-property-detail.html
+++ b/dashboard-property-detail.html
@@ -131,9 +131,9 @@
 
                 <a href="dashboard_landlord.html" class="w-full"><i class="form-links active  fa fa-database gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true"   >My Properties</i></a>
 
-                <i class=" form-links  fa fa-bank gap-3 w-full items-center text-[20px] text-purple-700  flex px-2 py-3 rounded-[8px] cursor-pointer border "  > Add Bank</i>
+                <a href="dasboard-auction.html" class="w-full"><i class="form-links   fa fa-bank gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true"  >Auction</i></a>
 
-                <i class=" form-links fa fa-podcast gap-3 w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border" aria-hidden="true" >Auction</i>
+                <a href="dashboard-store.html" class="w-full"><i class="form-links   fa fa-shopping-cart gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true"  >Our Store</i></a>
 
                 <i class="fa fa-sign-out gap-3 w-full items-center text-[20px] text-purple-700 text-center  flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true">Log Out</i>
   
@@ -359,9 +359,9 @@
 
             <a href="dashboard_landlord.html" class="w-full"><i class="form-links actives   fa fa-database gap-3  w-full items-center text-[17px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700  " aria-hidden="true" >My Properties</i></a>
 
-            <a href="#" class="w-full"><i class=" form-links  fa fa-bank gap-3 w-full items-center text-[17px] text-purple-700  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700 "  > Add Bank</i></a>
+            <a href="dasboard-auction.html" class="w-full"><i class=" form-links fa fa-podcast gap-3 w-full items-center text-[17px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700" aria-hidden="true"  >Auction</i></a>
 
-            <a href="#" class="w-full"><i class=" form-links fa fa-podcast gap-3 w-full items-center text-[17px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700" aria-hidden="true"  >Auction</i></a>
+            <a href="dashboard-store.html" class="w-full"><i class=" form-links  fa fa-shopping-cart gap-3 w-full items-center text-[17px] text-purple-700  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700 "  > Our Store</i></a>
 
             <i class="fa fa-sign-out gap-3 w-full items-center text-[17px] text-purple-700 text-center  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700  " aria-hidden="true">Log Out</i>
 
