--- a/dashboard_landlord.html
+++ b/dashboard_landlord.html
@@ -114,11 +114,11 @@
   
                 <a href="dashbord_marketplace.html" class="w-full"><i class=" form-links  fa fa-laptop w-full   gap-3 items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer  border " aria-hidden="true"  >Marketplace</i></a>
 
-                <a href="dashboard_landlord.html" class="w-full"><i class="form-links active  fa fa-database gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true"   >My Properties</i></a>
+                <a href="dashboard_landlord.html" class="w-full"><i class="form-links active  fa fa-database gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true" >My Properties</i></a>
 
-                <i class=" form-links  fa fa-bank gap-3 w-full items-center text-[20px] text-purple-700  flex px-2 py-3 rounded-[8px] cursor-pointer border "  > Add Bank</i>
+                <a href="dasboard-auction.html" class="w-full"><i class="form-links   fa fa-podcast  gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true" >Auction</i></a>
 
-                <i class=" form-links fa fa-podcast gap-3 w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border" aria-hidden="true" >Auction</i>
+                <a href="dashboard-store.html" class="w-full"><i class="form-links   fa fa-shopping-cart gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true" >Our Store</i></a>
 
                 <i class="fa fa-sign-out gap-3 w-full items-center text-[20px] text-purple-700 text-center  flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true">Log Out</i>
   
@@ -178,7 +178,7 @@
 
               </div>
 
-              <div class="w-full flex  justify-around my-4 flex-wrap h-[75vh] overflow-auto items-center gap-6  items-center   ">
+              <div class="w-full flex  justify-around my-4 flex-wrap h-[75vh] overflow-auto items-baseline gap-6  ">
 
                 <div class="lg:w-[30%] md:w-[40%]  flex md:flex-row flex-col gap-3 w-full p-3 border shadow-sm rounded-[15px] relative ">
                   
@@ -577,9 +577,9 @@
 
             <a href="dashboard_landlord.html" class="w-full"><i class="form-links actives   fa fa-database gap-3  w-full items-center text-[17px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700  " aria-hidden="true" >My Properties</i></a>
 
-            <a href="#" class="w-full"><i class=" form-links  fa fa-bank gap-3 w-full items-center text-[17px] text-purple-700  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700 "  > Add Bank</i></a>
+            <a href="dasboard-auction.html" class="w-full"><i class=" form-links fa fa-podcast gap-3 w-full items-center text-[17px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700" aria-hidden="true"  >Auction</i></a>
 
-            <a href="#" class="w-full"><i class=" form-links fa fa-podcast gap-3 w-full items-center text-[17px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700" aria-hidden="true"  >Auction</i></a>
+            <a href="dashboard-store.html" class="w-full"><i class=" form-links  fa fa-shoping-cart gap-3 w-full items-center text-[17px] text-purple-700  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700 "  > Our Store</i></a>
 
             <i class="fa fa-sign-out gap-3 w-full items-center text-[17px] text-purple-700 text-center  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700  " aria-hidden="true">Log Out</i>
 
