--- a/dasboard-auction.html
+++ b/dasboard-auction.html
@@ -78,7 +78,7 @@
 
     <main id="body" class="">
 
-      <!-- <div id="preloader" class="flex items-center  justify-center ">
+       <div id="preloader" class="flex items-center  justify-center ">
 
         <div class="md:w-[40%]  pulse w-full md:mx-4  mx-auto flex justify-center  ">
   
@@ -96,7 +96,7 @@
             </div>
         </div>
 
-      </div> -->
+      </div> 
 
       <section class="mx-2 my-2   flex justify-center items-center ">
 
@@ -499,7 +499,7 @@
   
                     <div class="md:p-2 w-full flex flex-row items-center  gap-1 ">
   
-                        <input type="text"  class=" index-2 bg-transparent w-full focus:outline-none placeholder:text-black lg:p-2 p-1 md:placeholder:text-[13px] md:text-[15px] placeholder:text-[13px] text-[14px] border rounded border-purple-700 text-purple-700" name="" pattern=" [0-9]* " placeholder="Account Number" id="day" >
+                        <input type="text"  class=" index-2 bg-transparent w-full focus:outline-none placeholder:text-black lg:p-2 p-1 md:placeholder:text-[13px] md:text-[15px] placeholder:text-[13px] text-[14px] border rounded border-purple-700 text-purple-700" name="" pattern=" [0-9]* " placeholder="Account Number" id="num" >
   
                     </div>
   
@@ -523,6 +523,7 @@
 
 
     <script src="dashboard.js" defer></script>
+    <script src="login.js" defer></script>
 
   </body>
 </html>
