--- a/dashboard-property-add.html
+++ b/dashboard-property-add.html
@@ -85,7 +85,7 @@
 
     <main id="body" class="">
 
-      <!-- <div id="preloader" class="flex items-center  justify-center ">
+       <div id="preloader" class="flex items-center  justify-center ">
 
         <div class="md:w-[40%]  pulse w-full md:mx-4  mx-auto flex justify-center  ">
   
@@ -103,7 +103,7 @@
             </div>
         </div>
 
-      </div> -->
+      </div> 
 
       <section class="mx-2 my-2   flex justify-center items-center ">
 
