--- a/dashbord_marketplace.html
+++ b/dashbord_marketplace.html
@@ -117,7 +117,7 @@
 
                 <a href="dashboard_landlord.html" class="w-full"><i class="form-links   fa fa-database gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true"   >My Properties</i></a>
 
-                <a href="dashboard-add-bank.html" class="w-full"><i class="form-links   fa fa-podcast gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true"   >Auction</i></a>
+                <a href="dasboard-auction.html" class="w-full"><i class="form-links   fa fa-podcast gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true"  >Auction</i></a>
 
                 <a href="dashboard-store.html" class="w-full"><i class="form-links   fa fa-shopping-cart gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true"   >Our Store</i></a>
 
