--- a/dashboard-property-detail.html
+++ b/dashboard-property-detail.html
@@ -133,7 +133,7 @@
 
                 <a href="dasboard-auction.html" class="w-full"><i class="form-links   fa fa-bank gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true"  >Auction</i></a>
 
-                <a href="dashboard-store.html" class="w-full"><i class="form-links   fa fa-shopping-cart gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true"  >Our Store</i></a>
+                <a href="dashboard-helpdesk.html" class="w-full"><i class="form-links fa fa-info-circle gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true" >Help-desk</i></a>
 
                 <i class="fa fa-sign-out gap-3 w-full items-center text-[20px] text-purple-700 text-center  flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true">Log Out</i>
   
@@ -217,7 +217,7 @@
 
               </div>
 
-              <div class="flex md:flex-row flex-col w-full items-center justify-between md:px-4 px-2 my-3 md:my-5 ">
+              <div class="flex md:flex-row flex-col w-full px-2 md:px-5  justify-between  my-3 md:my-5 ">
 
                 <div class=" my-2">
                     <h2 class=" text-[17px] md:text-[20px] ">Property Name:<span class="font-bold  text-[17px] md:text-[20px]"> God's Love Villa </span></h2>
@@ -361,7 +361,7 @@
 
             <a href="dasboard-auction.html" class="w-full"><i class=" form-links fa fa-podcast gap-3 w-full items-center text-[17px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700" aria-hidden="true"  >Auction</i></a>
 
-            <a href="dashboard-store.html" class="w-full"><i class=" form-links  fa fa-shopping-cart gap-3 w-full items-center text-[17px] text-purple-700  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700 "  > Our Store</i></a>
+            <a href="dashboard-helpdesk.html" class="w-full"><i class=" form-links  fa fa-info-circle gap-3 w-full items-center text-[17px] text-purple-700  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700 "  > Help-desk</i></a>
 
             <i class="fa fa-sign-out gap-3 w-full items-center text-[17px] text-purple-700 text-center  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700  " aria-hidden="true">Log Out</i>
 
