--- a/dashbord_marketplace.html
+++ b/dashbord_marketplace.html
@@ -42,11 +42,6 @@
         color: white;
       }
 
-      .actives {
-        background-color:  #fff;
-        color: white;
-      }
-    
       .dart {
         background-color:  #f0f0f0;
         color:  rgb(181, 129, 226);
@@ -119,7 +114,7 @@
 
                 <a href="dasboard-auction.html" class="w-full"><i class="form-links   fa fa-podcast gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true"  >Auction</i></a>
 
-                <a href="dashboard-store.html" class="w-full"><i class="form-links   fa fa-shopping-cart gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true"   >Our Store</i></a>
+                <a href="dashboard-helpdesk.html" class="w-full"><i class="form-links  fa fa-info-circle gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true" >Help-desk</i></a>
 
                 <i class="fa fa-sign-out gap-3 w-full items-center text-[20px] text-purple-700 text-center  flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true">Log Out</i>
   
@@ -723,9 +718,9 @@
 
             <a href="dashboard_landlord.html" class="w-full"><i class="form-links   fa fa-database gap-3  w-full items-center text-[17px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700  " aria-hidden="true" >My Properties</i></a>
 
-            <a href="dasboard-auction.html" class="w-full"><i class=" form-links fa fa-podcast gap-3 w-full items-center text-[17px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700" aria-hidden="true"  >Auction</i></a>
+            <a href="dasboard-auction.html" class="w-full"> <i class=" form-links fa fa-podcast gap-3 w-full items-center text-[17px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700" aria-hidden="true" >Auction</i></a>
 
-            <a href="dashboard-store.html" class="w-full"><i class=" form-links  fa fa-shopping-cart gap-3 w-full items-center text-[17px] text-purple-700  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700 "  > Our Store</i></a>
+            <a href="dashboard-helpdesk.html" class="w-full"> <i class=" form-links  fa fa-info-circle gap-3 w-full items-center text-[17px] text-purple-700  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700 " > Help-desk </i></a>
 
             <i class="fa fa-sign-out gap-3 w-full items-center text-[17px] text-purple-700 text-center  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700  " aria-hidden="true">Log Out</i>
 
