--- a/dasboard-auction.html
+++ b/dasboard-auction.html
@@ -135,7 +135,7 @@
 
                 <a href="dasboard-auction.html" class="w-full"><i class="form-links active  fa fa-bank gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true"  >Auction</i></a>
 
-                <a href="dashboard-store.html" class="w-full"><i class="form-links   fa fa-shopping-cart gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true"  >Our Store</i></a>
+                <a href="dashboard-helpdesk.html" class="w-full"><i class="form-links  fa fa-info-circle gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true" >Help-desk</i></a>
 
                 <i class="fa fa-sign-out gap-3 w-full items-center text-[20px] text-purple-700 text-center  flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true">Log Out</i>
   
@@ -165,7 +165,7 @@
 
           <i id="lead" class=" lg:hidden absolute fa fa-align-left top-[10px] left-[12px] flex gap-3 px-2 items-center text-[18px] text-purple-700 my-2  items-center  shadow-lg flex px-2 py-3 hover:bg-[#f0f0f0] rounded-[8px] cursor-pointer  border  " aria-hidden="true" onclick="fist()"></i>
 
-          <div class="w-full  px-1">
+        <div class="w-full  px-1">
 
             <div class="p-2  shadow-lg flex justify-between items-center  rounded-tr-[25px]">
 
@@ -439,7 +439,7 @@
 
             <a href="#" class="w-full"><i class=" form-links fa fa-podcast actives gap-3 w-full items-center text-[17px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700" aria-hidden="true"  >Auction</i></a>
 
-            <a href="dashboard-store.html" class="w-full"><i class=" form-links  fa fa-shopping-cart gap-3 w-full items-center text-[17px] text-purple-700  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700 "  > Our Store</i></a>
+            <a href="dashboard-helpdesk.html" class="w-full"><i class=" form-links  fa fa-info-circle gap-3 w-full items-center text-[17px] text-purple-700  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700 "  > Help-desk</i></a>
 
             <i class="fa fa-sign-out gap-3 w-full items-center text-[17px] text-purple-700 text-center  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700  " aria-hidden="true">Log Out</i>
 
@@ -477,12 +477,13 @@
   
         <h2 class="text-purple-700 mx-2 text-[15px] md:text-[20px] my-2 text-center ">Add your Banking Details</h2>
   
-        <form action="" method="post" class="">
+        <form action="" method="post" class="md:w-[80%] w-full mx-auto ">
   
           <div class="flex md:flex-row flex-col items-center justify-center w-[95%] mx-auto  gap-3 ">
   
             <div class="w-full">
-  
+
+                  <h2 class="text-red-700 text-[1]"></h2>
                   <div class=" mt-3 flex md:flex-row flex-col gap-2 w-full items-center px-2 " >
   
                       <input type="text" class="index-2 bg-transparent w-full  focus:outline-none placeholder:text-black lg:p-2 p-1 md:placeholder:text-[13px] md:text-[15px] placeholder:text-[13px] text-[14px] border rounded border-purple-700 text-purple-700" name="" placeholder="Bank Name " id="">
