--- a/dashboard_landlord.html
+++ b/dashboard_landlord.html
@@ -118,7 +118,7 @@
 
                 <a href="dasboard-auction.html" class="w-full"><i class="form-links   fa fa-podcast  gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true" >Auction</i></a>
 
-                <a href="dashboard-store.html" class="w-full"><i class="form-links   fa fa-shopping-cart gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true" >Our Store</i></a>
+                <a href="dashboard-helpdesk.html" class="w-full"><i class="form-links  fa fa-info-circle gap-3  w-full items-center text-[20px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true" >Help-desk</i></a>
 
                 <i class="fa fa-sign-out gap-3 w-full items-center text-[20px] text-purple-700 text-center  flex px-2 py-3 rounded-[8px] cursor-pointer border  " aria-hidden="true">Log Out</i>
   
@@ -579,7 +579,7 @@
 
             <a href="dasboard-auction.html" class="w-full"><i class=" form-links fa fa-podcast gap-3 w-full items-center text-[17px] text-purple-700 flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700" aria-hidden="true"  >Auction</i></a>
 
-            <a href="dashboard-store.html" class="w-full"><i class=" form-links  fa fa-shoping-cart gap-3 w-full items-center text-[17px] text-purple-700  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700 "  > Our Store</i></a>
+            <a href="dashboard-helpdesk.html" class="w-full"><i class=" form-links  fa fa-info-circle gap-3 w-full items-center text-[17px] text-purple-700  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700 "  > Help-desk</i></a>
 
             <i class="fa fa-sign-out gap-3 w-full items-center text-[17px] text-purple-700 text-center  flex px-2 py-3 rounded-[8px] cursor-pointer border border-purple-700  " aria-hidden="true">Log Out</i>
 
